--- a/kid-ui/partials/app.html
+++ b/kid-ui/partials/app.html
@@ -1,1 +1,7 @@
-Hello Kid
+<div class="relative-wrapper">
+    <nav>
+        <a href="" ng-link="['Map']">map</a>
+        <a href="" ng-link="['Profile']">profile</a>
+    </nav>
+    <ng-outlet></ng-outlet>    
+</div>
