--- a/kid-ui/partials/map.html
+++ b/kid-ui/partials/map.html
@@ -1,2 +1,6 @@
-<h1>Map</h1>
-<div id="mapid"></div>
+<div class="relative-wrapper fill-to-body map">
+    <div id="mapid"></div>
+    <nav>
+        <a href="" ng-link="['Profile']">profile</a>
+    </nav>
+</div>
