--- a/kid-ui/css/app.css
+++ b/kid-ui/css/app.css
@@ -32,3 +32,51 @@ html, body,
     width: 100%;
     height: 100%;
 }
+
+/* Profile Photo Page */
+#canvas {
+	display: none;
+}
+
+video#video { 
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background-size: cover;
+}
+
+.photo-view { 
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	width: 100vw; 
+	height: 100vh;
+
+}
+.photo-button {
+	position: absolute;
+	bottom: 1em;
+	padding: 1em 2em;
+}
+
+.photo-button img {
+	width: 80px;
+}
+
+#image {
+	z-index: -1;
+	position: fixed; 
+	top: 0; 
+	left: 0; 
+	/* Preserve aspet ratio */
+	min-width: 100%;
+	min-height: 100%;
+}
