--- a/kid-ui/partials/profile.html
+++ b/kid-ui/partials/profile.html
@@ -5,4 +5,4 @@
 <canvas id="canvas" width="640" height="480"></canvas>
 <div ng-hide="$ctrl.showVideo" class="photo-view">
 	<img id="image" src="">
-</div>`
+</div>
