fix profile photo

--- a/kid-ui/partials/map.html
+++ b/kid-ui/partials/map.html
@@ -1,5 +1,8 @@
 <div class="relative-wrapper fill-to-body map">
     <div id="mapid"></div>
+    <nav>
+        <a href="" ng-link="['Profile']">Profile</a>
+    </nav>
     <div class="candy-count">
         <picture>
             <img src="/assets/sm-candybar.png" alt="">
