--- a/kid-ui/css/app.css
+++ b/kid-ui/css/app.css
@@ -74,9 +74,12 @@ video#video {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+    align-items: center;
 	width: 100vw; 
 	height: 100vh;
-
+}
+.photo-view p {
+    font-size: 24px;
 }
 .photo-button {
 	position: absolute;
@@ -94,8 +97,12 @@ video#video {
 	top: 0; 
 	left: 0; 
 	/* Preserve aspet ratio */
-	min-width: 100%;
-	min-height: 100%;
+	width: 100%;
+	height: 100%;
+    object-fit: cover;
+}
+#camera {
+    display: none;
 }
 
 .key-marker {
