--- a/kid-ui/partials/map.html
+++ b/kid-ui/partials/map.html
@@ -1,9 +1,11 @@
 <div class="relative-wrapper fill-to-body map">
     <div id="mapid"></div>
-    <nav>
-        <a href="" ng-link="['Profile']">Profile</a>
-    </nav>
     <div class="candy-count">
+        <picture class="profile">
+            <a href="" ng-link="['Profile']">
+                <img src="/assets/profile.png" alt="">
+            </a>
+        </picture>
         <picture>
             <img src="/assets/sm-candybar.png" alt="">
             <small>x</small>{{$ctrl.currentUser.candies[0].count}}
