--- a/kid-ui/css/app.css
+++ b/kid-ui/css/app.css
@@ -119,6 +119,51 @@ video#video {
     border-radius: 50%;
     background-color: #f00;
 }
+
 .me.marker {
     fill: #fff;
+
+.provider-info {
+	position: absolute;
+	box-sizing: border-box;
+	top: 0;
+	padding: 2em;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	z-index: 999999;
+	width: 100vw;
+	height: 100vh;
+	background-color: transparent;
+}
+
+.provider-info .close {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	font-size: 20px;
+	border: 1px solid #fff;
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+}
+
+.provider-info img {
+	width: 80%;
+	border-radius: 50%;
+	border: 10px solid #fff;
+}
+
+.provider-info .display-name {
+	border-radius: 10px;
+	box-sizing: border-box;
+	width: 100%;
+	background: rgba(256,256,256,.9);
+	padding: 1.618em;
+}
+
+.provider-info.hide {
+	display: none;
 }
