fix a couple styling fix and add final confirmation

--- a/provider-ui/partials/form.html
+++ b/provider-ui/partials/form.html
@@ -1,5 +1,6 @@
 <header layout="row">
-    <div class="plain button">
+    <div class="plain button"
+        md-ink-ripple="#00D6F9">
         <a href="" ng-link="['Map']">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42">
             <path d="M23.83,21L41.41,3.41c0.78-0.78,0.78-2.05,0-2.83s-2.05-0.78-2.83,0L21,18.17L3.41,0.59
@@ -9,7 +10,8 @@
         </a>
     </div>
     <h1 flex>Event Detail</h1>
-    <a href="" ng-link="['Form2']" class="next plain button">
+    <a href="" ng-link="['Form2']" class="next plain button"
+        md-ink-ripple="#00D6F9">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22.17 40.34">
             <path d="M20.17,35.51L4.83,20.17L20.17,4.83l1.41-1.41c0.78-0.78,0.78-2.05,0-2.83l0,0c-0.78-0.78-2.05-0.78-2.83,0
                 L0.59,18.76c-0.78,0.78-0.78,2.05,0,2.83l18.17,18.17c0.78,0.78,2.05,0.78,2.83,0l0,0c0.78-0.78,0.78-2.05,0-2.83L20.17,35.51z"/>
@@ -18,7 +20,7 @@
 </header>
 <form action="">
     <div layout="row" layout-padding>
-        <md-input-container class="md-block" flex-gt-sm>
+        <md-input-container class="md-block" flex>
             <label>Event Type</label>
             <md-select ng-model="user.state" flex>
               <md-option value="holiday">
