--- a/provider-ui/partials/map.html
+++ b/provider-ui/partials/map.html
@@ -1,6 +1,7 @@
 <div class="relative-wrapper fill-to-body map">
     <div class="title">Select Geo Fence</div>
-    <a ng-link="['Form']" class="bottom button">
+    <a ng-link="['Form']" class="bottom button"
+        md-ink-ripple="#00D6F9">
         Confirm Area
     </a>
     <div id="mapid"></div>
