--- a/provider-ui/css/app.css
+++ b/provider-ui/css/app.css
@@ -60,9 +60,15 @@ header h1 {
 }
 
 header .plain.button {
+    display: block;
+    padding: 10px;
+    width: 25px;
     fill: #000;
     font-size: 3em;
     margin: 0 0.3em;
+}
+.plain.button.next,
+.plain.button.previous {
     width: 15px;
 }
 
@@ -118,6 +124,7 @@ svg.candy {
 }
 
 .checkout-button {
+    position: relative;
     height: 52px;
     border-top: 1px solid #BFC8CB;
     border-bottom: 1px solid #BFC8CB;
@@ -127,4 +134,8 @@ svg.candy {
 .checkout-button img {
     height: 26px;
     width: auto;
+}
+
+*[md-ink-ripple] {
+    position: relative;
 }
