--- a/kid-ui/css/app.css
+++ b/kid-ui/css/app.css
@@ -122,6 +122,7 @@ video#video {
 
 .me.marker {
     fill: #fff;
+}
 
 .provider-info {
 	position: absolute;
@@ -137,6 +138,51 @@ video#video {
 	height: 100vh;
 	background-color: transparent;
 }
+.flip-container {
+    perspective: 1000px;
+}
+
+/* flip the pane when hovered */
+.flip-container.swipe .flipper {
+    transform: rotateY(-180deg);
+}
+.flip-container.swipe.right .flipper {
+    transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back {
+	width: 277px;
+	height: 277px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
 
 .provider-info .close {
 	display: flex;
@@ -148,10 +194,16 @@ video#video {
 	border-radius: 50%;
 	width: 50px;
 	height: 50px;
+    margin-bottom: 3em;
+}
+.provider-info .close svg {
+    fill: #fff;
+    width: 15px;
 }
 
 .provider-info img {
-	width: 80%;
+	width: 256px;
+	height: 256px;
 	border-radius: 50%;
 	border: 10px solid #fff;
 }
