--- a/kid-ui/partials/profile.html
+++ b/kid-ui/partials/profile.html
@@ -1,6 +1,6 @@
 <div class="photo-view">
 	<img id="image" src="">
-	<p>Please take a selfie</p>
+	<p>Smile 😁</p>
 	<a id="snap" class="photo-button"><img ng-src="assets/camera.png"></a>
 </div>
 <input id="camera" type="file" capture="camera" accept="image/*" id="cameraInput" name="cameraInput">
