--- a/kid-ui/css/app.css
+++ b/kid-ui/css/app.css
@@ -38,7 +38,7 @@ html, body,
 .map .candy-count .profile {
     flex: 1;
     align-self: flex-start;
-    margin-left: 1em;
+	margin-left: 1em;
 }
 .map .candy-count picture {
     margin-right: 5px;
@@ -218,4 +218,21 @@ video#video {
 
 .provider-info.hide {
 	display: none;
+}
+
+.fab {
+	position: relative;
+}
+.fab-menu {
+	visibility: hidden;
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: all 0.6s;
+}
+.fab-menu.open {
+	opacity: 1;
+	visibility: visible;
+	transform: translateY(-4em);
 }
