add server integration

--- a/provider-ui/partials/form.html
+++ b/provider-ui/partials/form.html
@@ -22,7 +22,7 @@
     <div layout="row" layout-padding>
         <md-input-container class="md-block" flex>
             <label>Event Type</label>
-            <md-select ng-model="user.state" flex>
+            <md-select ng-model="$ctrl.type" flex>
               <md-option value="holiday">
                  Holiday Special Event
               </md-option>
@@ -35,13 +35,16 @@
      <div layout="row" layout-padding>
           <md-input-container class="md-block" flex>
             <label>Event Title</label>
-            <input ng-model="user.city">
+            <input ng-model="$ctrl.title">
           </md-input-container>
      </div>
      <div layout="row" layout-padding>
           <md-input-container class="md-block" flex>
             <label>Description</label>
-            <textarea ng-model="user.biography" md-maxlength="150" rows="5" md-select-on-focus></textarea>
+            <textarea ng-model="$ctrl.description" md-maxlength="350" rows="5"></textarea>
           </md-input-container>
+     </div>
+     <div layout="row" class="flex-center">
+        <img src="/assets/camera.png" alt="">
      </div>
 </form>
