--- a/kid-ui/css/app.css
+++ b/kid-ui/css/app.css
@@ -227,12 +227,16 @@ video#video {
 	visibility: hidden;
 	opacity: 0;
 	position: absolute;
-	top: 0;
+	top: -1em;
 	left: 0;
-	transition: all 0.6s;
+	transition: all 0.3s cubic-bezier(0.58, 0.19, 0.65, 1.76)
+}
+.fab-menu img {
+	width: 69px;
+	height: 69px;
 }
 .fab-menu.open {
 	opacity: 1;
 	visibility: visible;
-	transform: translateY(-4em);
+	transform: translateY(-6em);
 }
