--- a/kid-ui/partials/map.html
+++ b/kid-ui/partials/map.html
@@ -36,6 +36,9 @@
                 <a href="" ng-link="['Profile']">
                     <img src="/assets/camera.png" alt="">
                 </a>
+                <a href="kandygo://">
+                    <img src="/assets/store@2x.png" alt="">
+                </a>
             </div>
         </div>
         <picture>
