--- a/kid-ui/css/app.css
+++ b/kid-ui/css/app.css
@@ -240,3 +240,19 @@ video#video {
 	visibility: visible;
 	transform: translateY(-6em);
 }
+.animated.radius {
+	animation: pulse 3s infinite cubic-bezier(0.88, -0.05, 0.4, 0.9);	
+	transform-origin: center center;
+}
+
+@keyframes pulse {
+  from {
+	opacity: 0;
+    transform: scale(0, 0);
+  }
+
+  to {
+	opacity: 0.7;
+    transform: scale(1, 1);
+  }
+}
