--- a/provider-ui/css/app.css
+++ b/provider-ui/css/app.css
@@ -248,3 +248,13 @@ a.cancel {
     transform: scale(1, 1);
   }
 }
+
+.total {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 26px;
+    font-weight: 800;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-right: 1em;
+}
