--- a/provider-ui/css/app.css
+++ b/provider-ui/css/app.css
@@ -113,8 +113,13 @@ svg.candy {
     font-size: 16px;
     display: flex;
     justify-content: space-around;
+    align-content: center;
     font-weight: 400;
     font-family: Helvetica, Arial, sans-serif;
+}
+
+.stepper span {
+    padding: 5px;
 }
 
 .price {
