fix fab menu click area

--- a/kid-ui/partials/map.html
+++ b/kid-ui/partials/map.html
@@ -28,8 +28,8 @@
 	</div>
     <div class="candy-count">
         <div class="profile fab">
-            <div ng-click="$ctrl.toggleFab()">
-                <img src="/assets/profile.png" alt="">
+            <div>
+                <img src="/assets/profile.png" alt="" ng-click="$ctrl.toggleFab()">
             </div>
 
             <div class="fab-menu">
