--- a/kid-ui/css/app.css
+++ b/kid-ui/css/app.css
@@ -119,7 +119,12 @@ video#video {
 .photo-button {
 	position: absolute;
 	bottom: 1em;
-	padding: 1em 2em;
+	left: 0;
+	padding: 2em 0;
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	width: 100%;
 }
 
 .photo-button img {
